--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <canvas id="canvas" style="width: 100%; height: 100%"></canvas>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
