--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Birthday Count Downer -- Count down your birthday online</title>
+    <link
+      href="https://fonts.googlefonts.cn/css?family=Lobster"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Birthday Count Downer -- Count down your birthday online</title>
-  <link href="https://fonts.googlefonts.cn/css?family=Lobster" rel="stylesheet">
-</head>
-
-<body>
-  <canvas id="canvas" style="width: 100%; height: 100%"></canvas>
-  <script type="module" src="/src/main.ts"></script>
-</body>
-
+  <body>
+    <canvas id="canvas" style="width: 100%; height: 100%"></canvas>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
